Migrate Spring Boot 2 to 3